--- a/Agda.cabal
+++ b/Agda.cabal
@@ -111,6 +111,7 @@ exposed-modules: AgdaMain
 		 TypeChecking.Rules.Term
                  TypeChecking.Serialise
                  TypeChecking.Substitute
+		 TypeChecking.With
                  Utils.Char
                  Utils.FileName
                  Utils.Fresh
