split typechecking of lhs into multiple modules and fixed a bug

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -107,6 +107,11 @@ exposed-modules: AgdaMain
 		 TypeChecking.Rules.Decl
 		 TypeChecking.Rules.Def
 		 TypeChecking.Rules.LHS
+		 TypeChecking.Rules.LHS.Implicit
+		 TypeChecking.Rules.LHS.Instantiate
+		 TypeChecking.Rules.LHS.Problem
+		 TypeChecking.Rules.LHS.Split
+		 TypeChecking.Rules.LHS.Unify
 		 TypeChecking.Rules.Record
 		 TypeChecking.Rules.Term
                  TypeChecking.Serialise
