foetus-termination-checker-hookup-code-sprint

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -70,6 +70,7 @@ exposed-modules: AgdaMain
                  Termination.Matrix
                  Termination.RCall
                  Termination.Semiring
+                 Termination.TermCheck
                  Termination.Termination
                  Termination.Utilities
                  Termination.Utils
