Broke out interaction ranges into a separate module.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -26,6 +26,7 @@ exposed-modules: AgdaMain
                  Interaction.Highlighting.Emacs
                  Interaction.Highlighting.Generate
                  Interaction.Highlighting.Precise
+                 Interaction.Highlighting.Range
                  Interaction.Highlighting.Vim
                  Interaction.Imports
                  Interaction.Monad
