--- a/Agda.cabal
+++ b/Agda.cabal
@@ -152,5 +152,5 @@ exposed-modules: AgdaMain
                  Utils.Tuple
                  Utils.Unicode
                  Version
-ghc-options:     -O -Wall -Werror -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-simple-patterns -fno-warn-unused-matches -fno-warn-unused-binds -fno-warn-unused-imports -fno-warn-type-defaults -fno-warn-orphans
+ghc-options:     -O -Wall -Werror -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-simple-patterns -fno-warn-unused-matches -fno-warn-unused-binds -fno-warn-unused-imports -fno-warn-type-defaults -fno-warn-orphans -auto-all
 
