keep track of mutual blocks after type checking (for termination checking)

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -94,6 +94,7 @@ exposed-modules: AgdaMain
                  TypeChecking.Monad.Env
                  TypeChecking.Monad.Imports
                  TypeChecking.Monad.MetaVars
+		 TypeChecking.Monad.Mutual
                  TypeChecking.Monad.Open
                  TypeChecking.Monad.Options
                  TypeChecking.Monad.Signature
