--- a/examples/Makefile
+++ b/examples/Makefile
@@ -11,7 +11,8 @@ run_agda = $(agda) $(EXTRA_AGDA_FLAGS)
 
 test_files = Vec.agda Setoid.agda TT.agda ISWIM.agda \
 			 AIM5/Hedberg/SET.agda AIM5/yoshiki/SET.agda \
-             $(shell find Introduction -name '*.agda')
+			 SimpleTypes.agda \
+       $(shell find Introduction -name '*.agda')
 tests	   = $(patsubst %,%.test,$(test_files))
 
 polydep : AIM5/PolyDep/Main.agda
