Sketched using Happy to generate parsers. + I did not really finish the attempt, using Happy for this grammar   seems to be tricky. + Using Happy to generate many parsers, each of which would be used   only once, would probably be inefficient. A software LR parser   generator could be possibly be used instead, though.

--- a/src/prototyping/mixfix/Makefile
+++ b/src/prototyping/mixfix/Makefile
@@ -5,6 +5,9 @@ mixfix : MixFix.hs
 mixfix2 : MixFix2.hs
 	ghc -O -o $@ --make $< -main-is $(<:.hs=.main) -i../../full -odir . -hidir .
 
+mixfix3 : MixFix3.hs
+	ghc -O -o $@ --make $< -main-is $(<:.hs=.main) -i../../full -odir . -hidir .
+
 mixfixSlow : MixFix2.hs
 	ghc -O -o $@ --make $< -main-is $(<:.hs=.slowMain) -i../../full -odir . -hidir .
 
@@ -13,3 +16,6 @@ p=-p -hb
 prof : mixfix
 	time ./mixfix +RTS $(p)
 	hp2ps -c mixfix.hp
+
+%.hs : %.y
+	happy -gai $<
