--- a/.darcsignore
+++ b/.darcsignore
@@ -37,8 +37,9 @@ src/prototyping/modules/flat/module$
 ^setup$
 ^src/main/dist$
 ^src/full/Syntax/Parser/(Parser|Lexer).hs$
-^src/main/\.setup-config$
 ^src/main/.uptodate$
 \#.*\#$
 \.agda\.html$
 notes/papers/iird/paper.tex
+\.setup-config$
+src/transl/dist
