--- a/Agda.cabal
+++ b/Agda.cabal
@@ -77,6 +77,7 @@ exposed-modules: AgdaMain
                  Termination.Utils
                  Tests
                  TypeChecker
+                 TypeChecking.Abstract
                  TypeChecking.Constraints
                  TypeChecking.Conversion
 		 TypeChecking.DisplayForm
