--- a/Agda.cabal
+++ b/Agda.cabal
@@ -4,7 +4,7 @@ license:         BSD3
 author:          Ulf Norell, Catarina Coquand, Makoto Takeyama, Nils Anders Danielsson, ...
 maintainer:      Ulf Norell <ulfn@cs.chalmers.se>
 homepage:
-category:        Theorem Proving
+category:        Dependent types
 build-depends:   base, mtl, QuickCheck >= 1.0 && < 2.0, readline, haskell98, haskell-src, binary >= 0.3, zlib
 synopsis:        A dependently typed proof checker / programming language.
 hs-source-dirs:  src/full
