--- a/src/main/Agda-executable.cabal
+++ b/src/main/Agda-executable.cabal
@@ -1,6 +1,7 @@
 name:          Agda-executable
 version:       2.1.3
 license:       BSD3
+license-file:  LICENSE
 author:        Ulf Norell, Catarina Coquand, Makoto Takeyama, Nils Anders Danielsson, ...
 maintainer:    Ulf Norell <ulfn@cs.chalmers.se>
 homepage:
