--- a/Agda.cabal
+++ b/Agda.cabal
@@ -6,153 +6,168 @@ author:          Ulf Norell, Catarina Coquand, Makoto Takeyama, Nils Anders Dani
 maintainer:      Ulf Norell <ulfn@cs.chalmers.se>
 homepage:
 category:        Dependent types
-build-depends:   base, mtl, QuickCheck >= 1.0 && < 2.0, readline, haskell98, haskell-src, binary >= 0.3, zlib
 synopsis:        A dependently typed proof checker / programming language.
-hs-source-dirs:  src/full
-exposed-modules: AgdaMain
-                 Interaction.BasicOps
-                 Interaction.GhciTop
-		 Compiler.Agate.Classify
-                 Compiler.Agate.Common
-                 Compiler.Agate.Main
-                 Compiler.Agate.OptimizedPrinter
-                 Compiler.Agate.TranslateName
-                 Compiler.Agate.UntypedPrinter
-		 Compiler.Alonzo.Main
-		 Compiler.Alonzo.Names
-		 Compiler.Alonzo.Haskell
-		 Compiler.Alonzo.PatternMonad
-                 Interaction.CommandLine.CommandLine
-                 Interaction.Exceptions
-                 Interaction.Highlighting.Emacs
-                 Interaction.Highlighting.Generate
-                 Interaction.Highlighting.Precise
-                 Interaction.Highlighting.Range
-                 Interaction.Highlighting.Vim
-                 Interaction.Imports
-                 Interaction.Monad
-                 Interaction.Options
-                 Syntax.Abstract.Name
-                 Syntax.Abstract.Pretty
-                 Syntax.Abstract.Views
-                 Syntax.Abstract
-                 Syntax.Common
-                 Syntax.Concrete.Definitions
-                 Syntax.Concrete.Name
-                 Syntax.Concrete.Operators.Parser
-                 Syntax.Concrete.Operators
-                 Syntax.Concrete.Pretty
-                 Syntax.Concrete
-                 Syntax.Fixity
-                 Syntax.Info
-                 Syntax.Internal
-		 Syntax.Internal.Pattern
-                 Syntax.Literal
-                 Syntax.Parser.Alex
-                 Syntax.Parser.Comments
-                 Syntax.Parser.Layout
-                 Syntax.Parser.LexActions
-                 Syntax.Parser.Lexer
-                 Syntax.Parser.LookAhead
-                 Syntax.Parser.Monad
-                 Syntax.Parser.Parser
-                 Syntax.Parser.StringLiterals
-                 Syntax.Parser.Tokens
-                 Syntax.Parser
-                 Syntax.Position
-		 Syntax.Scope.Base
-		 Syntax.Scope.Monad
-                 Syntax.Strict
-                 Syntax.Translation.AbstractToConcrete
-                 Syntax.Translation.ConcreteToAbstract
-                 Syntax.Translation.InternalToAbstract
-                 Termination.CallGraph
-                 Termination.Dumb
-                 Termination.Lexicographic
-                 Termination.Matrix
-                 Termination.RCall
-                 Termination.Semiring
-                 Termination.TermCheck
-                 Termination.Termination
-                 Termination.Utilities
-                 Termination.Utils
-                 Tests
-                 TypeChecker
-                 TypeChecking.Abstract
-                 TypeChecking.Constraints
-                 TypeChecking.Conversion
-		 TypeChecking.DisplayForm
-                 TypeChecking.Empty
-                 TypeChecking.Errors
-                 TypeChecking.Free
-		 TypeChecking.Implicit
-                 TypeChecking.MetaVars
-                 TypeChecking.Monad.Base
-                 TypeChecking.Monad.Builtin
-                 TypeChecking.Monad.Closure
-                 TypeChecking.Monad.Constraints
-                 TypeChecking.Monad.Context
-                 TypeChecking.Monad.Debug
-                 TypeChecking.Monad.Env
-                 TypeChecking.Monad.Imports
-                 TypeChecking.Monad.MetaVars
-		 TypeChecking.Monad.Mutual
-                 TypeChecking.Monad.Open
-                 TypeChecking.Monad.Options
-                 TypeChecking.Monad.Signature
-                 TypeChecking.Monad.State
-                 TypeChecking.Monad.Statistics
-                 TypeChecking.Monad.Trace
-                 TypeChecking.Monad
-                 TypeChecking.Patterns.Match
-                 TypeChecking.Positivity
-		 TypeChecking.Pretty
-                 TypeChecking.Primitive
-                 TypeChecking.Rebind
-		 TypeChecking.Records
-                 TypeChecking.Reduce
-		 TypeChecking.Rules.Builtin
-		 TypeChecking.Rules.Data
-		 TypeChecking.Rules.Decl
-		 TypeChecking.Rules.Def
-		 TypeChecking.Rules.LHS
-		 TypeChecking.Rules.LHS.Implicit
-		 TypeChecking.Rules.LHS.Instantiate
-		 TypeChecking.Rules.LHS.Problem
-		 TypeChecking.Rules.LHS.Split
-		 TypeChecking.Rules.LHS.Unify
-		 TypeChecking.Rules.Record
-		 TypeChecking.Rules.Term
-                 TypeChecking.Serialise
-                 TypeChecking.Substitute
-                 TypeChecking.Telescope
-		 TypeChecking.With
-                 Utils.Char
-                 Utils.FileName
-                 Utils.Fresh
-                 Utils.Function
-		 Utils.Generics
-		 Utils.Hash
-                 Utils.IO
-                 Utils.List
-                 Utils.Map
-                 Utils.Maybe
-                 Utils.Monad.Undo
-                 Utils.Monad
-		 Utils.Permutation
-                 Utils.Pointer
-                 Utils.Pretty
-                 Utils.ReadLine
-                 Utils.ReadP
-                 Utils.Serialise
-		 Utils.Size
-                 Utils.String
-		 Utils.Suffix
-                 Utils.TestHelpers
-                 Utils.Trace
-		 Utils.Trie
-                 Utils.Tuple
-                 Utils.Unicode
-                 Version
-ghc-options:     -O -Wall -Werror -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-simple-patterns -fno-warn-unused-matches -fno-warn-unused-binds -fno-warn-unused-imports -fno-warn-type-defaults -fno-warn-orphans -auto-all
+cabal-version:   >= 1.2.2
+
+flag splitBase
+ description: Choose the new smaller, split-up base package.
+
+Library
+  if flag(splitBase)
+    build-depends: base >= 3, containers, pretty, directory, old-time, bytestring, array
+  else
+    build-depends: base < 3
+  if !os(win32) && !os(mingw32)
+    build-depends: readline
+  build-depends:   mtl, QuickCheck >= 1.0 && < 2.0,
+                   haskell98, haskell-src, binary >= 0.3, zlib
+  build-tools:     happy >= 1.16, alex >= 2.0
+  hs-source-dirs:  src/full
+  exposed-modules: AgdaMain
+                   Interaction.BasicOps
+                   Interaction.GhciTop
+                   Compiler.Agate.Classify
+                   Compiler.Agate.Common
+                   Compiler.Agate.Main
+                   Compiler.Agate.OptimizedPrinter
+                   Compiler.Agate.TranslateName
+                   Compiler.Agate.UntypedPrinter
+                   Compiler.Alonzo.Main
+                   Compiler.Alonzo.Names
+                   Compiler.Alonzo.Haskell
+                   Compiler.Alonzo.PatternMonad
+                   Interaction.CommandLine.CommandLine
+                   Interaction.Exceptions
+                   Interaction.Highlighting.Emacs
+                   Interaction.Highlighting.Generate
+                   Interaction.Highlighting.Precise
+                   Interaction.Highlighting.Range
+                   Interaction.Highlighting.Vim
+                   Interaction.Imports
+                   Interaction.Monad
+                   Interaction.Options
+                   Syntax.Abstract.Name
+                   Syntax.Abstract.Pretty
+                   Syntax.Abstract.Views
+                   Syntax.Abstract
+                   Syntax.Common
+                   Syntax.Concrete.Definitions
+                   Syntax.Concrete.Name
+                   Syntax.Concrete.Operators.Parser
+                   Syntax.Concrete.Operators
+                   Syntax.Concrete.Pretty
+                   Syntax.Concrete
+                   Syntax.Fixity
+                   Syntax.Info
+                   Syntax.Internal
+                   Syntax.Internal.Pattern
+                   Syntax.Literal
+                   Syntax.Parser.Alex
+                   Syntax.Parser.Comments
+                   Syntax.Parser.Layout
+                   Syntax.Parser.LexActions
+                   Syntax.Parser.Lexer
+                   Syntax.Parser.LookAhead
+                   Syntax.Parser.Monad
+                   Syntax.Parser.Parser
+                   Syntax.Parser.StringLiterals
+                   Syntax.Parser.Tokens
+                   Syntax.Parser
+                   Syntax.Position
+                   Syntax.Scope.Base
+                   Syntax.Scope.Monad
+                   Syntax.Strict
+                   Syntax.Translation.AbstractToConcrete
+                   Syntax.Translation.ConcreteToAbstract
+                   Syntax.Translation.InternalToAbstract
+                   Termination.CallGraph
+                   Termination.Dumb
+                   Termination.Lexicographic
+                   Termination.Matrix
+                   Termination.RCall
+                   Termination.Semiring
+                   Termination.TermCheck
+                   Termination.Termination
+                   Termination.Utilities
+                   Termination.Utils
+                   Tests
+                   TypeChecker
+                   TypeChecking.Abstract
+                   TypeChecking.Constraints
+                   TypeChecking.Conversion
+                   TypeChecking.DisplayForm
+                   TypeChecking.Empty
+                   TypeChecking.Errors
+                   TypeChecking.Free
+                   TypeChecking.Implicit
+                   TypeChecking.MetaVars
+                   TypeChecking.Monad.Base
+                   TypeChecking.Monad.Builtin
+                   TypeChecking.Monad.Closure
+                   TypeChecking.Monad.Constraints
+                   TypeChecking.Monad.Context
+                   TypeChecking.Monad.Debug
+                   TypeChecking.Monad.Env
+                   TypeChecking.Monad.Imports
+                   TypeChecking.Monad.MetaVars
+                   TypeChecking.Monad.Mutual
+                   TypeChecking.Monad.Open
+                   TypeChecking.Monad.Options
+                   TypeChecking.Monad.Signature
+                   TypeChecking.Monad.State
+                   TypeChecking.Monad.Statistics
+                   TypeChecking.Monad.Trace
+                   TypeChecking.Monad
+                   TypeChecking.Patterns.Match
+                   TypeChecking.Positivity
+                   TypeChecking.Pretty
+                   TypeChecking.Primitive
+                   TypeChecking.Rebind
+                   TypeChecking.Records
+                   TypeChecking.Reduce
+                   TypeChecking.Rules.Builtin
+                   TypeChecking.Rules.Data
+                   TypeChecking.Rules.Decl
+                   TypeChecking.Rules.Def
+                   TypeChecking.Rules.LHS
+                   TypeChecking.Rules.LHS.Implicit
+                   TypeChecking.Rules.LHS.Instantiate
+                   TypeChecking.Rules.LHS.Problem
+                   TypeChecking.Rules.LHS.Split
+                   TypeChecking.Rules.LHS.Unify
+                   TypeChecking.Rules.Record
+                   TypeChecking.Rules.Term
+                   TypeChecking.Serialise
+                   TypeChecking.Substitute
+                   TypeChecking.Telescope
+                   TypeChecking.With
+                   Utils.Char
+                   Utils.Either
+                   Utils.FileName
+                   Utils.Fresh
+                   Utils.Function
+                   Utils.Generics
+                   Utils.Hash
+                   Utils.IO
+                   Utils.List
+                   Utils.Map
+                   Utils.Maybe
+                   Utils.Monad.Undo
+                   Utils.Monad
+                   Utils.Permutation
+                   Utils.Pointer
+                   Utils.Pretty
+                   Utils.ReadLine
+                   Utils.ReadP
+                   Utils.Serialise
+                   Utils.Size
+                   Utils.String
+                   Utils.Suffix
+                   Utils.TestHelpers
+                   Utils.Trace
+                   Utils.Trie
+                   Utils.Tuple
+                   Utils.Unicode
+                   Version
+  ghc-options:     -O -Wall -Werror -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-simple-patterns -fno-warn-unused-matches -fno-warn-unused-binds -fno-warn-unused-imports -fno-warn-type-defaults -fno-warn-orphans -auto-all
 
