--- a/Agda.cabal
+++ b/Agda.cabal
@@ -4,7 +4,7 @@ license:         BSD3
 license-file:    LICENSE
 author:          Ulf Norell, Catarina Coquand, Makoto Takeyama, Nils Anders Danielsson, ...
 maintainer:      Ulf Norell <ulfn@cs.chalmers.se>
-homepage:
+homepage:        http://www.cs.chalmers.se/~ulfn/Agda/
 category:        Dependent types
 synopsis:        A dependently typed proof checker / programming language.
 cabal-version:   >= 1.2.2
