--- a/Agda.cabal
+++ b/Agda.cabal
@@ -2,7 +2,7 @@ name:            Agda
 version:         2.1.3
 cabal-version:   >= 1.2 && < 2
 build-type:      Simple
-license:         BSD3
+license:         OtherLicense
 license-file:    LICENSE
 author:          Ulf Norell, Catarina Coquand, Makoto Takeyama, Nils Anders Danielsson, ...
 maintainer:      Ulf Norell <ulfn@cs.chalmers.se>
