--- a/Agda.cabal
+++ b/Agda.cabal
@@ -1,7 +1,7 @@
 name:            Agda
 version:         2.1.3
 cabal-version:   >= 1.2 && < 2
-build-type:      Simple
+build-type:      Configure
 license:         OtherLicense
 license-file:    LICENSE
 author:          Ulf Norell, Catarina Coquand, Makoto Takeyama, Nils Anders Danielsson, ...
