Simplified the test for Windows.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -25,7 +25,7 @@ library
                    array >= 0.1 && < 1,
                    binary >= 0.4.1 && < 1,
                    zlib >= 0.4.0.1 && < 1
-  if !os(win32) && !os(mingw32)
+  if !os(windows)
     build-depends: readline >= 1.0.1 && < 2
   build-tools:     happy >= 1.15 && < 2,
                    alex >= 2.0.1 && < 3
