--- a/Agda.cabal
+++ b/Agda.cabal
@@ -147,6 +147,8 @@ library
                    TypeChecking.Serialise
                    TypeChecking.Substitute
                    TypeChecking.Telescope
+                   TypeChecking.Test.Generators
+                   TypeChecking.Tests
                    TypeChecking.With
                    Utils.Char
                    Utils.Either
