--- a/Agda.cabal
+++ b/Agda.cabal
@@ -15,7 +15,6 @@ library
   build-depends:   base >= 3 && < 4,
                    mtl >= 1.1 && < 2,
                    QuickCheck >= 2.0 && < 3,
-                   readline >= 1.0.1 && < 2,
                    haskell98 >= 1.0.1 && < 2,
                    haskell-src >= 1.0.1.1 && < 2,
                    containers >= 0.1.0 && < 1,
@@ -27,7 +26,7 @@ library
                    binary >= 0.4.1 && < 1,
                    zlib >= 0.4.0.1 && < 1
   if !os(win32) && !os(mingw32)
-    build-depends: readline
+    build-depends: readline >= 1.0.1 && < 2
   build-tools:     happy >= 1.15 && < 2,
                    alex >= 2.0.1 && < 3
   exposed-modules: AgdaMain
