--- a/Agda.cabal
+++ b/Agda.cabal
@@ -9,6 +9,7 @@ maintainer:      Ulf Norell <ulfn@cs.chalmers.se>
 homepage:        http://www.cs.chalmers.se/~ulfn/Agda/
 category:        Dependent types
 synopsis:        A dependently typed proof checker / programming language.
+tested-with:     GHC == 6.8.1
 
 library
   hs-source-dirs:  src/full
