changed syntax for record fields in preparaton for fancy projection modules + Fields are now prefixed by the 'field' keyword. This is a layout keyword   so you can say:   record A : Set where     field a : X           b : Y

--- a/src/main/Makefile
+++ b/src/main/Makefile
@@ -5,7 +5,9 @@ include $(TOP)/mk/paths.mk
 include $(TOP)/mk/config.mk
 include $(TOP)/mk/rules.mk
 
-src_files = $(shell $(FIND) $(FULL_SRC_DIR) -name '*hs')
+src_files = $(shell $(FIND) $(FULL_SRC_DIR) -name '*hs') \
+						$(shell $(FIND) $(FULL_SRC_DIR) -name '*.x') \
+						$(shell $(FIND) $(FULL_SRC_DIR) -name '*.y')
 
 AGDA_BIN_P = dist/build/agda/agda_p
 
