--- a/examples/Makefile
+++ b/examples/Makefile
@@ -10,7 +10,7 @@ agda = $(AGDA_BIN)
 run_agda = $(agda) $(EXTRA_AGDA_FLAGS)
 
 test_files = Vec.agda Lookup.agda Binary.agda Setoid.agda \
-			 TT.agda ISWIM.agda \
+			 TT.agda ISWIM.agda ParenDepTac.agda \
 			 AIM5/Hedberg/SET.agda AIM5/yoshiki/SET.agda \
 			 SimpleTypes.agda \
        $(shell find Introduction -name '*.agda')
