more benchmark runs

--- a/benchmark/Makefile
+++ b/benchmark/Makefile
@@ -4,16 +4,29 @@ include $(TOP)/mk/paths.mk
 
 include tests.mk
 
-SUFFIX = $(shell echo `hostname -s`-`date +"%Y%m%d-%H.%M"`)
+TAG			= $(shell echo `hostname -s`-`date +"%Y%m%d-%H.%M"`)
 LOG_DIR = logs
+PROC_INFO = $(shell which procinfo)
+HOST_INFO = $(shell which hostinfo)
 
-logFiles = $(patsubst %,$(LOG_DIR)/%-$(SUFFIX),$(allTests))
+ifeq ($(HOST_INFO),)
+ifeq ($(PROC_INFO),)
+INFO = echo "No info"
+else
+INFO = $(PROC_INFO)
+endif
+else
+INFO = $(HOST_INFO)
+endif
+
+logFiles = $(patsubst %,$(LOG_DIR)/$(TAG)/%,$(allTests))
 
 all : $(logFiles)
 
-$(LOG_DIR)/%-$(SUFFIX) :
+$(LOG_DIR)/$(TAG)/% :
 	@echo Running benchmark $*
+	@mkdir -p $(LOG_DIR)/$(TAG)
 	@$(AGDA_BIN) $($*) +RTS -s$@
 	@echo "──────────────────────────────────────────────────────────────────" >> $@
-	@hostinfo >> $@
+	@$(INFO) >> $@
 
