--- a/src/hTags/hTags.cabal
+++ b/src/hTags/hTags.cabal
@@ -1,7 +1,7 @@
 name: hTags
 version: 0.1
 cabal-version: >= 1.2 && < 2
-author: Ulf Norell
+author: Ulf Norell, Nils Anders Danielsson
 
 executable hTags
   main-is:       Main.hs
@@ -9,6 +9,7 @@ executable hTags
                  base >= 3,
                  filepath >= 1.1 && < 2,
                  directory >= 1.0 && < 2,
-                 process >= 1.0 && < 2
+                 process >= 1.0 && < 2,
+                 containers >= 0.1 && < 1
   ghc-options:   -fwarn-incomplete-patterns -O
 
