disable profiling of the executable

--- a/src/main/Agda-executable.cabal
+++ b/src/main/Agda-executable.cabal
@@ -17,10 +17,10 @@ executable agda
                  readline >= 1.0.1 && < 2
   extra-libraries: readline
 
-executable agda_p
-  main-is:         Main.hs
-  build-depends:   Agda,
-                   base >= 3 && < 4,
-                   readline >= 1.0.1 && < 2
-  extra-libraries: readline
-  ghc-options:     -prof -auto-all
+-- executable agda_p
+--   main-is:         Main.hs
+--   build-depends:   Agda,
+--                    base >= 3 && < 4,
+--                    readline >= 1.0.1 && < 2
+--   extra-libraries: readline
+--   ghc-options:     -prof -auto-all
