Add a few required files into the sdist tarball Though it's not obvious what the configure is actually used for. None of the results seem to be used. Perhaps build-type: Simple would be sufficient? Using this patch and the latest development version of Cabal, "cabal sdist" now produces a tarball that can be used sucessfully to build agda. Previously the .hs-boot files were omitted from the tarbal, see: http://hackage.haskell.org/trac/hackage/ticket/67

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -10,6 +10,8 @@ homepage:        http://www.cs.chalmers.se/~ulfn/Agda/
 category:        Dependent types
 synopsis:        A dependently typed proof checker / programming language.
 tested-with:     GHC == 6.8.1
+extra-source-files: configure.ac configure install-sh mk/config.mk.in
+                    src/full/undefined.h
 
 library
   hs-source-dirs:  src/full
