messing around with the simple-lib

--- a/.darcsignore
+++ b/.darcsignore
@@ -51,3 +51,4 @@ src/hTags/dist$
 examples/fileIO/.*\.hs$
 examples/fileIO/Main$
 src/prototyping/nameless/(nameless|Lam)$
+examples/simple-lib/.*\.hs
